# Prototype

./: LICENSE  Makefile  README.md  index.html
.github/workflows/: webeditor.yml
html/: index.html
src/: IO.ml  IO.mli  Makefile  annotations.mli  ast.ml  ast.mli  checker.ml  dune  lexer.mll  main_proto.ml  main_py.ml  msc.ml  old_annotations.ml  old_annotations.mli  old_checker.ml  parser.mly  prototype.ml  prototype_js.ml  py_ast.ml  py_ast.mli  py_lexer.mll  py_parser.mly  py_to_source.ml  py_to_source.mli  test.ml  test.py  test_ref.ml  types_additions.ml  types_additions.mli  utils.ml  variable.mli
src/common/: cduce.ml  cduce.mli  dune  types_additions.ml  types_additions.mli  utils.ml  variable.ml  variable.mli
src/main/: lib_js.ml  main.ml  prototype.ml
src/parsing/: IO.ml  IO.mli  ast.ml  ast.mli  dune  lexer.mll  parser.mly  pyparser.ml  pyparser.mli  variable.ml  variable.mli
src/python/: dune  py_ast.ml  py_ast.mli  py_parser.mly
src/source/: ast.ml  ast.mli  dune  lexer.mll  parser.mly
src/system/: msc.ml  msc.mli
src/tests/: test.ml  test.py  test1.py
src/types/: additions.ml  additions.mli  base.ml  base.mli
src/typing/: annotations.ml  annotations.mli  checker.ml  checker.mli  dune  msc.ml  msc.mli  old_annotations.ml  old_annotations.mli  old_checker.ml  old_checker.mli
src/utils/: colors.ml
tests/: test1.ml  test1.py
webeditor/: index.html
