(library
 (name main_proto)
 (libraries common source typing python
  unix
  ;num
  )
 ;(preprocess
 ; (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
 (modules
  (:standard
   \
   ("prototype_js" prototype))))

(executable
 (name prototype)
 (libraries main_proto)
 (modules prototype))

(executable
 (name prototype_js)
 (libraries main_proto)
 (modes js)
 (preprocess (pps js_of_ocaml-ppx))
 (modules prototype_js))
