(library
 (name main)
 (libraries common source typing python
  unix
  ;num
  )
 ;(preprocess
 ; (pps ppx_deriving.ord ppx_deriving.eq))
 (modules
  (:standard
   \
   ("prototype_js" prototype))))

(executable
 (name prototype)
 (libraries main)
 (modules prototype))

(executable
 (name prototype_js)
 (libraries main)
 (modes js)
 (preprocess (pps js_of_ocaml-ppx))
 (modules prototype_js))
